--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,8 @@
         <div class="graph-table">
             <app-chart></app-chart>
         </div>
-        <div class="map">
+        <div class="map-table">
+            <app-map></app-map>
         </div>
 
     </div>
