[UPDATE] zoom and pick commerce to display on map

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
                 <app-chart></app-chart>
             </div>
             <div class="map">
-                <app-map></app-map>
+                <app-map [focus]="commer"></app-map>
             </div>
         </div>
     </div>
